# Tinyrpc

./: CMakeLists.txt  LICENSE  Readme.md
src/: Acceptor.cpp  Channel.cpp  Connection.cpp  Epoll.cpp  EventLoop.cpp  Server.cpp  Socket.cpp
src/include/: Acceptor.h  Channel.h  Connection.h  Epoll.h  EventLoop.h  Serializer.hpp  Server.h  Socket.h  TrpcClient.hpp  TrpcServer.hpp
test/: RpcClient.cpp  RpcServer.cpp  multiple_client.cpp  server.cpp  single_client.cpp
